build/configs/iptables/rules.v4
# Generated by iptables-save v1.8.10 (nf_tables) on Sun Feb 22 20:24:33 2026
*mangle
:PREROUTING ACCEPT [293:33759]
:INPUT ACCEPT [293:33759]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [223:160311]
:POSTROUTING ACCEPT [223:160311]
-A PREROUTING -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A POSTROUTING -p tcp -m tcp --dport 22 -j ACCEPT
COMMIT
# Completed on Sun Feb 22 20:24:33 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Sun Feb 22 20:24:33 2026
*raw
:PREROUTING ACCEPT [293:33759]
:OUTPUT ACCEPT [223:160311]
-A OUTPUT -p tcp -m tcp --dport 22 -j ACCEPT
COMMIT
# Completed on Sun Feb 22 20:24:33 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Sun Feb 22 20:24:33 2026
*filter
:INPUT ACCEPT [293:33759]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [223:160311]
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 22 -j ACCEPT
COMMIT
# Completed on Sun Feb 22 20:24:33 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Sun Feb 22 20:24:33 2026
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A POSTROUTING -p tcp -m tcp --dport 22 -j ACCEPT
COMMIT
# Completed on Sun Feb 22 20:24:33 2026
